Added link for the recipe page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/mushroompizza.html">Mushroom Pizza</a>
     </body>
 </html>
