--- a/recipes/mushroompizza.html
+++ b/recipes/mushroompizza.html
@@ -8,5 +8,6 @@
     
     <body>
         <h1>Mushroom Pizza Recipe</h1>
+        <img src="../img/Truffle Mushroom and Ricotta Pizza.jpeg" alt="a mushroom pizza served on a wooden plate" height="425" width="300">
     </body>
 </html>
