Added a brief description for the mushroom pizza recipe

--- a/recipes/mushroompizza.html
+++ b/recipes/mushroompizza.html
@@ -9,5 +9,8 @@
     <body>
         <h1>Mushroom Pizza Recipe</h1>
         <img src="../img/Truffle Mushroom and Ricotta Pizza.jpeg" alt="a mushroom pizza served on a wooden plate" height="425" width="300">
+        <h2>description</h2>
+        <p>Delicious and quick to make mushroom pizza recipe. Even if you don't like mushrooms you will love this recipe!</p>
+        <p>This pizza is for 4-6 people to enjoy. It will take approximately 35 minute to make.</p>
     </body>
 </html>
