Added the ingredients for the mushroom pizza recipe

--- a/recipes/mushroompizza.html
+++ b/recipes/mushroompizza.html
@@ -9,8 +9,24 @@
     <body>
         <h1>Mushroom Pizza Recipe</h1>
         <img src="../img/Truffle Mushroom and Ricotta Pizza.jpeg" alt="a mushroom pizza served on a wooden plate" height="425" width="300">
+        
         <h2>description</h2>
         <p>Delicious and quick to make mushroom pizza recipe. Even if you don't like mushrooms you will love this recipe!</p>
         <p>This pizza is for 4-6 people to enjoy. It will take approximately 35 minute to make.</p>
+
+        <h2>ingredients</h2>
+        <ul>
+            <li>1 tea glass of warm water</li>
+            <li>1 tea glass of warm milk</li>
+            <li>Half a packet of dry yeast</li>
+            <li>1 tablespoon sugar</li>
+            <li>1 teaspoon salt</li>
+            <li>1 tablespoon of yogurt</li>
+            <li>Grated cheddar cheese</li>
+            <li>Half a pack of mushrooms</li>
+            <li>1 onion</li>
+            <li>Flour {eyeball estimate}</li>
+        </ul>
+
     </body>
 </html>
