Added the steps for the mushroom pizza recipe

--- a/recipes/mushroompizza.html
+++ b/recipes/mushroompizza.html
@@ -22,11 +22,23 @@
             <li>1 tablespoon sugar</li>
             <li>1 teaspoon salt</li>
             <li>1 tablespoon of yogurt</li>
-            <li>Grated cheddar cheese</li>
+            <li>Grated kaşar cheese</li>
             <li>Half a pack of mushrooms</li>
             <li>1 onion</li>
             <li>Flour {eyeball estimate}</li>
         </ul>
+
+        <h2>steps</h2>
+        <ol>
+            <li>Knead the dough and leave it for half an hour.</li>
+            <li>Then roll it out with a rolling pin. It will be neither too thin nor too thick.</li>
+            <li>Curl the outer parts inward by one centimeter.</li>
+            <li>Poke holes in the center with a fork so that it does not rise too much.</li>
+            <li>Sprinkle grated kaşar cheese everywhere.</li>
+            <li>Put mushrooms chopped with their stems on top.</li>
+            <li>Add onion cut into rings on top.</li>
+            <li>Bake in a preheated oven at 200 degrees until the dough is well browned.</li>
+        </ol>
 
     </body>
 </html>
