--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/mushroompizza.html">Mushroom Pizza</a>
+        <p></p>
+        <a href="./recipes/raspberrymacarons.html">Raspberry Macarons</a>
     </body>
 </html>
