Edited the raspberry macaron recipe

--- a/recipes/raspberrymacarons.html
+++ b/recipes/raspberrymacarons.html
@@ -10,6 +10,48 @@
         <h1>Raspberry Macarons Recipe</h1>
         <img src="../img/Raspberry Macarons - House of Nash Eats.jpeg" alt="bitten raspberry macaron on top of another raspberry macaron" height="425" width="300">
 
+        <h2>description</h2>
+        <p>Not to be confused with macaroons French macarons are their own delicacy!</p>
+        <p>The recipe will take about 13hours and 30 minutes. It will have 8 servings.</p>
+
+        <h2>ingredients</h2>
+        <ul>
+            <li>4 tablespoons unsalted butter, softened</li>
+            <li>3/4 cup (80g) powdered sugar</li>
+            <li>1 1/2 tablespoons freeze-dried raspberry powder</li>
+            <li>1 tablespoon 2% milk</li>
+            <li>1 1/4 cups (100g) blanched almond meal</li>
+            <li>3/4 cup (80g) powdered sugar</li>
+            <li>Distilled white vinegar for cleaning the bowl</li>
+            <li>2 or 3 (80g) egg whites, at room temperature</li>
+            <li>1/4 teaspoon cream of tartar</li>
+            <li>1/3 cup (80g) sugar</li>
+            <li>1 drop Super Red gel food coloring</li>
+            <li>1/4 cup raspberry jam, for filling the macarons</li>
+        </ul>
+
+        <h2>steps</h2>
+        <ol>
+            <li>Whip the butter</li>
+            <li>Add the powdered sugar</li>
+            <li>Add the raspberry powder</li>
+            <li>Sift the dry ingredients</li>
+            <li>Wipe out your mixing bowl</li>
+            <li>Make the meringue</li>
+            <li>Check for stiff peaks</li>
+            <li>Fold in the dry ingredients</li>
+            <li>Scrape the batter</li>
+            <li>Do the figure 8 test</li>
+            <li>Pipe the shells</li>
+            <li>Remove more air bubbles</li>
+            <li>Rest the shells</li>
+            <li>Bake the shells</li>
+            <li>Cool the shells</li>
+            <li>Match the shells</li>
+            <li>Fill with the buttercream and jam</li>
+            <li>Mature the macarons</li>
+        </ol>
+
 
     </body>
 </html>
