Added the onepotpasta.html andedited the img and index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         <a href="./recipes/mushroompizza.html">Mushroom Pizza</a>
         <p></p>
         <a href="./recipes/raspberrymacarons.html">Raspberry Macarons</a>
+        <p></p>
+        <a href="./recipes/onepotpasta.html">One Pot Pasta</a>
     </body>
 </html>
