Edited the onepotpasta.html

--- a/recipes/onepotpasta.html
+++ b/recipes/onepotpasta.html
@@ -9,5 +9,24 @@
     <body>
         <h1>One Pot Pasta</h1>
         <img src="../img/pasta.jpg" alt="cooked pasta with vegetables mushrooms and sauce in a pot with a spoon in it." width="425" height="300">
+
+        <h2>description</h2>
+        <p> A 20 min recipe with few ingredients, ready to eat using a single pot!</p>
+
+        <h2>ingredients</h2>
+        <ul>
+            <li>Dry Pasta</li>
+            <li>Pasta Sauce</li>
+            <li>Water</li>
+            <li>Onion and Garlic</li>
+            <li>Vegetables of your choice</li>
+        </ul>
+
+        <h2>steps</h2>
+        <ol>
+            <li>Pour the pasta on the bottom of the pot or pan</li>
+            <li>Add the remaining ingredients</li>
+            <li>Bring the mixture to a boil, then simmer until the pasta is al-dente</li>
+        </ol>
     </body>
 </html>
