Edited th styles.css margins and paddings

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/mushroompizza.html">Mushroom Pizza</a>
+        <a class="first" href="./recipes/mushroompizza.html">Mushroom Pizza</a>
         <p></p>
-        <a href="./recipes/raspberrymacarons.html">Raspberry Macarons</a>
+        <a class="second" href="./recipes/raspberrymacarons.html">Raspberry Macarons</a>
         <p></p>
-        <a href="./recipes/onepotpasta.html">One Pot Pasta</a>
+        <a class="third" href="./recipes/onepotpasta.html">One Pot Pasta</a>
     </body>
 </html>
